--- a/kali修改为国内源/index.html
+++ b/kali修改为国内源/index.html
@@ -355,7 +355,7 @@ deb http://deb.debian.org/debian-security/ buster/updates main contrib non-free
                 height: "450",
                 left: "0",
                 bottom: "0",
-                basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
+                basePath: "https://cdn.jsdelivr.net/gh/CNbysec/Live2d-Mode@gh-pages/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
                 role: dataArray[parseInt(Math.random()*dataArray.length)],
                 background: "",
                 opacity:  1 
