--- a/安全技能书简版/index.html
+++ b/安全技能书简版/index.html
@@ -762,7 +762,7 @@
                 height: "450",
                 left: "0",
                 bottom: "0",
-                basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
+                basePath: "https://cdn.jsdelivr.net/gh/CNbysec/Live2d-Mode@gh-pages/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
                 role: dataArray[parseInt(Math.random()*dataArray.length)],
                 background: "",
                 opacity:  1 
