--- a/工具集/index.html
+++ b/工具集/index.html
@@ -20,7 +20,7 @@
 <meta name="application-name" content="bysec">
 <meta name="apple-mobile-web-app-title" content="bysec">
 
-<meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="/OSS/favicon.ico"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://www.bysec.cn/%E5%B7%A5%E5%85%B7%E9%9B%86/" /><link rel="next" href="https://www.bysec.cn/%E7%BB%95waf%E7%B3%BB%E5%88%97%E4%B9%8B%E7%BB%95%E5%AE%89%E5%85%A8%E7%8B%97/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
+<meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/favicon.ico"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://www.bysec.cn/%E5%B7%A5%E5%85%B7%E9%9B%86/" /><link rel="next" href="https://www.bysec.cn/%E7%BB%95waf%E7%B3%BB%E5%88%97%E4%B9%8B%E7%BB%95%E5%AE%89%E5%85%A8%E7%8B%97/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
     <noscript><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/animate/animate.min.css">
     <noscript><link rel="stylesheet" href="/lib/animate/animate.min.css"></noscript><script type="application/ld+json">
     {
@@ -185,7 +185,7 @@
         <script src="https://cdn.jsdelivr.net/gh/litstronger/live2d-moc3@master/js/live2dcubismframework.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/litstronger/live2d-moc3@master/js/live2dcubismpixi.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/litstronger/live2d-moc3@master/js/l2d.js"></script>
-        <script src="https://www.bysec.cn/OSS/js/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/CNbysec/CNbysec.github.io/OSS/js/main.js"></script>
         <div class="Canvas" id="L2dCanvas"></div>
         <script>
             var dataArray = new Array();
@@ -195,7 +195,7 @@
                 height: "450",
                 left: "0",
                 bottom: "0",
-                basePath: "https://www.bysec.cn/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
+                basePath: "https://cdn.jsdelivr.net/gh/CNbysec/Live2d-Model/%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF/",
                 role: dataArray[parseInt(Math.random()*dataArray.length)],
                 background: "",
                 opacity:  1 
