--- a/工具集/index.html
+++ b/工具集/index.html
@@ -20,7 +20,7 @@
 <meta name="application-name" content="bysec">
 <meta name="apple-mobile-web-app-title" content="bysec">
 
-<meta name="theme-color" content="#f8f8f8"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://www.bysec.cn/%E5%B7%A5%E5%85%B7%E9%9B%86/" /><link rel="prev" href="https://www.bysec.cn/kali%E4%BF%AE%E6%94%B9%E4%B8%BA%E5%9B%BD%E5%86%85%E6%BA%90/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
+<meta name="theme-color" content="#f8f8f8"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://www.bysec.cn/%E5%B7%A5%E5%85%B7%E9%9B%86/" /><link rel="prev" href="https://www.bysec.cn/kali%E4%BF%AE%E6%94%B9%E4%B8%BA%E5%9B%BD%E5%86%85%E6%BA%90/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
     <noscript><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/animate/animate.min.css">
     <noscript><link rel="stylesheet" href="/lib/animate/animate.min.css"></noscript><script type="application/ld+json">
     {
@@ -55,11 +55,11 @@
         <div class="header-title">
             <a href="/" title="bysec"><img
         class="lazyload logo"
-        data-src="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        data-srcset="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 1.5x, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 2x"
+        data-src="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        data-srcset="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 1.5x, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 2x"
         data-sizes="auto"
-        alt="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        title="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        alt="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        title="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
     />bysec</a>
         </div>
         <div class="menu">
@@ -85,11 +85,11 @@
             <div class="header-title">
                 <a href="/" title="bysec"><img
         class="lazyload logo"
-        data-src="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        data-srcset="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 1.5x, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 2x"
+        data-src="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        data-srcset="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 1.5x, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 2x"
         data-sizes="auto"
-        alt="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        title="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        alt="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        title="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
     />bysec</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
