--- a/绕waf系列之绕安全狗/index.html
+++ b/绕waf系列之绕安全狗/index.html
@@ -20,7 +20,7 @@
 <meta name="application-name" content="bysec">
 <meta name="apple-mobile-web-app-title" content="bysec">
 
-<meta name="theme-color" content="#f8f8f8"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://www.bysec.cn/%E7%BB%95waf%E7%B3%BB%E5%88%97%E4%B9%8B%E7%BB%95%E5%AE%89%E5%85%A8%E7%8B%97/" /><link rel="next" href="https://www.bysec.cn/%E7%BB%99%E8%A1%A8%E5%BC%9F%E7%9A%84web%E5%AE%89%E5%85%A8%E5%85%A5%E9%97%A8%E5%BB%BA%E8%AE%AE/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
+<meta name="theme-color" content="#f8f8f8"><meta name="msapplication-TileColor" content="#da532c"><link rel="icon" href="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https://www.bysec.cn/%E7%BB%95waf%E7%B3%BB%E5%88%97%E4%B9%8B%E7%BB%95%E5%AE%89%E5%85%A8%E7%8B%97/" /><link rel="next" href="https://www.bysec.cn/%E7%BB%99%E8%A1%A8%E5%BC%9F%E7%9A%84web%E5%AE%89%E5%85%A8%E5%85%A5%E9%97%A8%E5%BB%BA%E8%AE%AE/" /><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
     <noscript><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/animate/animate.min.css">
     <noscript><link rel="stylesheet" href="/lib/animate/animate.min.css"></noscript><script type="application/ld+json">
     {
@@ -55,11 +55,11 @@
         <div class="header-title">
             <a href="/" title="bysec"><img
         class="lazyload logo"
-        data-src="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        data-srcset="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 1.5x, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 2x"
+        data-src="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        data-srcset="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 1.5x, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 2x"
         data-sizes="auto"
-        alt="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        title="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        alt="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        title="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
     />bysec</a>
         </div>
         <div class="menu">
@@ -85,11 +85,11 @@
             <div class="header-title">
                 <a href="/" title="bysec"><img
         class="lazyload logo"
-        data-src="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        data-srcset="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 1.5x, https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100 2x"
+        data-src="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        data-srcset="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 1.5x, https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg 2x"
         data-sizes="auto"
-        alt="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
-        title="https://q.qlogo.cn/headimg_dl?dst_uin=547968300&amp;spec=100"
+        alt="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
+        title="https://s.pc.qq.com/tousu/img/20210627/2136793_1624804512.jpg"
     />bysec</a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
