--- a/工具集/index.html
+++ b/工具集/index.html
@@ -142,7 +142,9 @@
             <div class="post-info-license"></div>
         </div>
         <div class="post-info-line">
-            <div class="post-info-md"></div>
+            <div class="post-info-md"><span>
+                            <a class="link-to-markdown" href="/%E5%B7%A5%E5%85%B7%E9%9B%86/index.md" target="_blank" rel="noopener noreferrer">阅读原始文档</a>
+                        </span></div>
             <div class="post-info-share">
                 <span></span>
             </div>
