--- a/404.html
+++ b/404.html
@@ -65,12 +65,12 @@
         </div>
         <div class="menu">
             <div class="menu-inner"><a class="menu-item"
-                    href="/" ><i class='fa-fw fas fa-home'></i> 首页 </a><a class="menu-item"
-                    href="/posts/" ><i class='fa-fw fas fa-archive'></i> 归档 </a><a class="menu-item"
-                    href="/categories/" ><i class='fa-fw fas fa-folder-open'></i> 分类 </a><a class="menu-item"
-                    href="/tags/" ><i class='fa-fw fas fa-tags'></i> 标签 </a><a class="menu-item"
-                    href="/link/" ><i class='fa-fw fas fa-link'></i> 友链 </a><a class="menu-item"
-                    href="/about/" ><i class='fa-fw fas fa-comment-dots'></i> 关于 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+                    href="/" >{{< fa-icon regular smile >}} 首页 </a><a class="menu-item"
+                    href="/posts/" >{{< fa-icon regular smile >}} 归档 </a><a class="menu-item"
+                    href="/categories/" >{{< fa-icon regular smile >}} 分类 </a><a class="menu-item"
+                    href="/tags/" >{{< fa-icon regular smile >}} 标签 </a><a class="menu-item"
+                    href="/link/" >{{< fa-icon regular smile >}} 友链 </a><a class="menu-item"
+                    href="/about/" >{{< fa-icon regular smile >}} 关于 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                     <input type="text"
                         placeholder="搜索文章标题或内容..."
                         id="search-input-desktop">
@@ -123,7 +123,7 @@
                 <button class="search-cancel" id="search-cancel-mobile">
                     取消
                 </button>
-            </div><a class="menu-item" href="/" title="" ><i class='fa-fw fas fa-home'></i>首页</a><a class="menu-item" href="/posts/" title="" ><i class='fa-fw fas fa-archive'></i>归档</a><a class="menu-item" href="/categories/" title="" ><i class='fa-fw fas fa-folder-open'></i>分类</a><a class="menu-item" href="/tags/" title="" ><i class='fa-fw fas fa-tags'></i>标签</a><a class="menu-item" href="/link/" title="" ><i class='fa-fw fas fa-link'></i>友链</a><a class="menu-item" href="/about/" title="" ><i class='fa-fw fas fa-comment-dots'></i>关于</a><button class="menu-item theme-switch tw-w-full" aria-label="切换主题">
+            </div><a class="menu-item" href="/" title="" >{{< fa-icon regular smile >}}首页</a><a class="menu-item" href="/posts/" title="" >{{< fa-icon regular smile >}}归档</a><a class="menu-item" href="/categories/" title="" >{{< fa-icon regular smile >}}分类</a><a class="menu-item" href="/tags/" title="" >{{< fa-icon regular smile >}}标签</a><a class="menu-item" href="/link/" title="" >{{< fa-icon regular smile >}}友链</a><a class="menu-item" href="/about/" title="" >{{< fa-icon regular smile >}}关于</a><button class="menu-item theme-switch tw-w-full" aria-label="切换主题">
                 <svg class="icon"
     xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!-- Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) --><path d="M8 256c0 136.966 111.033 248 248 248s248-111.034 248-248S392.966 8 256 8 8 119.033 8 256zm248 184V72c101.705 0 184 82.311 184 184 0 101.705-82.311 184-184 184z"/></svg>
             </button></div>
